docs(api): added missing logs endpoints to the OpenAPI specs
